--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html lang="en">
-<title>Cat Perry's Facorite Cats</title>
+<head>
+<link rel="stylesheet" type="text/css" href="style.css"> 
+<title>Cat Perry's Favorite Cats</title>
+</head>
+<body></body>
+
 </html>
+
